Fix broken lines, fix broken onMouseDown for category and orientation buttons, increase default image width.

--- a/static/scripts/css/style.css
+++ b/static/scripts/css/style.css
@@ -130,7 +130,7 @@ div.navbar-header {
     overflow-y: scroll;
     font-family: 'Roboto Mono', monospace, sans-serif;
 	color: white;
-	height: 15%; 
+	height: 100%; 
 }
 
 #bb_small_text {
